# reading

./: .gitignore  AGENTS.md  README.md  astro.config.mjs  flake.nix  modal_app.py  package-lock.json  package.json  pyproject.toml
.agents/skills/site-steward/: SKILL.md
.agents/skills/site-steward/references/: deploy-checklist.md
.agents/skills/spike-generator/: SKILL.md
.agents/skills/spike-generator/references/: spike-template.md
.agents/skills/spike-planner/: SKILL.md
.agents/skills/spike-planner/references/: spike-brief.md
.agents/skills/spike-researcher/: SKILL.md
.agents/skills/spike-researcher/references/: source-rubric.md
reading_repo/: __init__.py  cli.py
scripts/: modal_identity.py
src/: content.config.ts
src/components/: SourceCard.astro  SourceList.astro  SpikeHero.astro
src/content/spikes/advisor-models-and-hinting-for-llm-reasoning/: index.mdx  sources.json
src/content/spikes/disaggregated-inference-delta-compression/: index.mdx  sources.json
src/content/spikes/evolution-strategies-and-swarm-scheduling/: index.mdx  sources.json
src/content/spikes/multi-tenant-lora-for-rl/: index.mdx  sources.json
src/content/spikes/training-techniques-for-large-oss-moe-models-on-modal/: index.mdx  sources.json
src/layouts/: BaseLayout.astro
src/pages/: index.astro
src/pages/spikes/: [slug].astro  index.astro
src/styles/: global.css
