[project]
name = "reading"
version = "0.1.0"
description = "Agent-native tooling for reading spikes"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi[standard]>=0.115.12",
  "modal>=1.2.6,<2",
  "pyyaml>=6.0.2",
  "typer>=0.16.0",
]

[project.scripts]
reading = "reading_repo.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["reading_repo"]
